2006-08-29  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test091.cxx:
  - Still doesn't work
  - Now throw exception rather than go into infinite recursion
2006-08-21  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, test/test001.cxx, test/test090.cxx:
  - Test new functions protocol_version() and server_version()
  - Test adorn_name()
  - Back to full test coverage for connection classes
 include/pqxx/cursor.hxx:
  - Now testing most of absolute_cursor (but not ready for use yet)
 test/test091.cxx:
  - New
  - Tests absolute_cursor
2006-08-20  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/transaction_base.hxx, test/test062.cxx:
  - Test esc_raw(const unsigned char[], size_t)
  - Back to full test coverage for transaction classes
2006-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Makefile.am:
  - More now-unnecessary output filtering removed
2006-08-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Finally resolved Doxygen problems!
  - Corrected prepared-statement execution example
 include/pqxx/except.hxx:
  - too_many_connections is a broken_connection, not an insufficient_resources
  - New undefined_table class (too useful not to have)
 include/pqxx/subtransaction.hxx:
  - Documented class
 src/result.cxx:
  - Recognize undefined_table error
2006-08-13  Jeroen T. Vermeulen <jtv@xs4all.nl>
 doc/Doxyfile.in:
  - Include libpqxx version number
  - Suppress unneeded output
  - Ignore PQXX_LIBEXPORT and PQXX_PRIVATE
 doc/Makefile.am:
  - No longer need to suppress unnecessary Doxygen output using grep
 include/pqxx/pipeline.hxx, src/connection.cxx, src/connection_base.cxx,
 src/cursor.cxx, src/dbtransaction.cxx, src/except.cxx, src/largeobject.cxx,
 src/pipeline.cxx, src/prepared_statement.cxx, src/result.cxx,
 src/robusttransaction.cxx, src/subtransaction.cxx, src/tablereader.cxx,
 src/tablestream.cxx, src/tablewriter.cxx, src/transaction.cxx,
 src/transaction_base.cxx: